--- a/serveur/info/test.html
+++ b/serveur/info/test.html
@@ -22,41 +22,50 @@
       var a = document.getElementById("a").value;
       var b = document.getElementById("b").value;
     
+      //debut de la requete
       const xhr = new XMLHttpRequest();
       xhr.open("GET", "http://pact-6.r2.enst.fr/flask/somme/" + a + "/" + b, true);
-      xhr.send();
-      //xhr.responseType = "json";
       xhr.onload = () => {
         if (xhr.status == 200) {
+          //fonction à exécuter après avoir reçu une réponse
           const data = xhr.response;
           var paragraphe = document.getElementById("reponse");
 			    paragraphe.innerHTML = data;
         } else {
+          //fonction à exécuter en cas d'erreur
           console.log(`Error: ${xhr.status}`);
         }
+      xhr.send();
+      //fonction à faire en attendant la réponse
     }
     };
 
   function maFonction2(){
     const url = 'http://pact-6.r2.enst.fr/flask/sommePOST';
-    const data = JSON.stringify({
+
+    // données à envoyer
+    const data = {
       a: parseInt(document.getElementById("a").value), 
       b: parseInt(document.getElementById("b").value)
-    });
+    };
 
+    // début de la requête
     const xhr = new XMLHttpRequest();
     xhr.open('POST', url, true);
     xhr.setRequestHeader("Content-type", "application/json");
     xhr.onload = () => {
       if (xhr.status == 200) {
+          //fonction à exécuter après avoir reçu une réponse
           const response = JSON.parse(xhr.responseText);
           var paragraphe = document.getElementById("reponse");
 			    paragraphe.innerHTML = response.value;
       } else {
+        //fonction à exécuter en cas d'erreur
         console.error('Error sending POST request');
       }
     };
-    xhr.send(data);
+    xhr.send(JSON.stringify(data));
+    //fonction à faire en attendant la réponse
   }
   </script>
 </body>
