modification de la page login

--- a/WebSite/login.html
+++ b/WebSite/login.html
@@ -12,6 +12,23 @@
 </head>
 <body>
 
+                       <!-- NAVBAR -->
+
+    <nav>
+        <div class="container nav__container">
+            <a href="index.html"><h4>Carebon</h4></a>
+            <ul class="nav__menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="actions.html">Actions</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+            <button id="open-menu-btn"><i class="uil uil-ellipsis-h"></i></button>
+            <button id="close-menu-btn"><i class="uil uil-multiply"></i></button>
+        </div>
+    </nav>
+
     <div class="containerF" id="containerF">
         <div class="form-container sign-up-container">
             <form action="#">
@@ -58,6 +75,6 @@
         </div>
     </div>
     
-    <script src="scriptLogin.js" charset="utf-8"></script>
+    <script src="./scriptLogin.js" charset="utf-8"></script>
 </body>
 </html>
